[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/dialogue/scripts/dialogue_manager.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://addons/dialogue/scenes/button.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 15.0
content_margin_top = 15.0
bg_color = Color( 0.207843, 0.333333, 0.439216, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.164706, 0.266667, 0.352941, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="dialogue_manager" type="Node"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -120.0
margin_right = 300.0
margin_bottom = -20.0
alignment = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 600.0
margin_bottom = 64.0
columns = 2

[node name="Button" parent="VBoxContainer/GridContainer" instance=ExtResource( 3 )]
margin_right = 298.0

[node name="Button2" parent="VBoxContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 302.0
margin_right = 600.0
text = "I'm tired"

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 600.0
margin_bottom = 82.0
step = 1.0
value = 100.0

[node name="Subtitles" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 600.0
margin_bottom = 100.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Subtitles"]
margin_left = 223.0
margin_right = 287.0
margin_bottom = 14.0
text = "Character:"
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/Subtitles"]
margin_left = 291.0
margin_right = 376.0
margin_bottom = 14.0
text = "How are you?"
align = 1
valign = 1

[node name="TextBoxes" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextBoxes"]
anchor_left = 0.061
anchor_top = 0.073
anchor_right = 0.939
anchor_bottom = 0.927
margin_left = -0.464005
margin_top = 0.199997
margin_right = 0.463928
margin_bottom = -0.200012

[node name="TextureRect" type="TextureRect" parent="TextBoxes/HBoxContainer"]
margin_right = 300.0
margin_bottom = 512.0
rect_min_size = Vector2( 300, 300 )
texture = ExtResource( 2 )
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextBoxes/HBoxContainer"]
margin_left = 304.0
margin_right = 899.0
margin_bottom = 512.0
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="TextBoxes/HBoxContainer/VBoxContainer"]
margin_top = 269.0
margin_right = 85.0
margin_bottom = 308.0
size_flags_horizontal = 0
custom_styles/normal = SubResource( 1 )
text = "Character"
valign = 1

[node name="Label2" type="Label" parent="TextBoxes/HBoxContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 595.0
margin_bottom = 512.0
rect_min_size = Vector2( 0, 200 )
custom_styles/normal = SubResource( 1 )
text = "How are you?"
autowrap = true

[node name="click_detector" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="click_detector" to="." method="_on_click_detector_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
